specdev: integrate public contracts and adapters
